media page basic styling completed, layout completed, external links for books added

--- a/media-links.html
+++ b/media-links.html
@@ -67,29 +67,27 @@
       <!-- podcast and books -->
       <section class="podcast">
         <!-- first hand account podcast -->
-        <div>
-          <h4 class="podcast-header">
-            <a
-              href="https://evergreenpodcasts.com/warriors-in-their-own-words/lt-col-r-k-montgomery-the-st-nazaire-raid"
-              target="_blank"
-            >
-              Lt Col R.K. Montgomery: The St. Nazaire Raid
-            </a>
-          </h4>
 
-          <iframe
-            title="interview with Lt Col R.K. Montgomery who took part in St Nazaire Raid"
-            frameborder="0"
-            height="482"
-            scrolling="no"
-            src="https://playlist.megaphone.fm/?e=FPMN8461578105&light=true&light=true"
-            width="100%"
-          ></iframe>
-        </div>
+        <h4 class="podcast-header">
+          <a
+            href="https://evergreenpodcasts.com/warriors-in-their-own-words/lt-col-r-k-montgomery-the-st-nazaire-raid"
+            target="_blank"
+          >
+            Lt Col R.K. Montgomery: The St. Nazaire Raid
+          </a>
+        </h4>
+
+        <iframe
+          title="interview with Lt Col R.K. Montgomery who took part in St Nazaire Raid"
+          frameborder="0"
+          scrolling="no"
+          src="https://playlist.megaphone.fm/?e=FPMN8461578105&light=true&light=true"
+          width="100%"
+        ></iframe>
       </section>
       <!-- operation chariot book and link -->
       <section class="st-nazaire-books">
-        <h4>Looking for a good book</h4>
+        <h4>Looking for a good book?</h4>
         <figure>
           <img
             src="assets/images/the greatest raid - book.jpg"
@@ -115,6 +113,16 @@
             Chariot, Bridge of Spies author Giles Whittell reveals it to be a
             fundamentally misconceived raid whose impact and legacy was secured
             by astonishing bravery.
+            <br />
+            <br />
+            <br />
+            <a
+              href="https://shop.nam.ac.uk/the-greatest-raid-st-nazaire-1942-the-heroic-story.html"
+              target="_blank"
+              rel="noopener"
+              style="font-size: 2rem"
+              >Buy Now</a
+            >
           </figcaption>
         </figure>
 
@@ -139,6 +147,16 @@
             Victoria Crosses. Into the Jaws of Death is the true story of how
             the decisive courage of a small group of men changed the course of
             the war.
+            <br />
+            <br />
+            <br />
+            <a
+              href="https://www.bookwiseonline.co.uk/into-the-jaws-of-death-3090-p.asp"
+              target="_blank"
+              rel="noopener"
+              style="font-size: 2rem"
+              >Buy Now</a
+            >
           </figcaption>
         </figure>
       </section>
