alteration made to layout of gallery page, VC winners given there own section, gallery section update to just images

--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
 
     <!-- main -->
     <main>
-      <h1>gallery</h1>
+      <h1>Gallery and VC Winners</h1>
       <!-- image gallery -->
       <div class="row">
         <!-- first colum -->
@@ -65,15 +65,17 @@
           />
           <img src="assets/images/caputred commandos.jpg" style="width: 100%" />
           <!-- vc winner -->
-          <div>
+          <!-- <div>
             <img
               src="assets/images/William Alfred SAVAGE.png"
               alt="image of VC winner William Alfred SAVAGE"
               class="vc-winner"
+              style="float: left"
             />
             <h3>William Alfred SAVAGE</h3>
             <blockquote
               cite="https://vcgca.org/our-people/profile/1465/william-alfred"
+              style="float: right"
             >
               For great gallantry, skill and devotion to duty as gunlayer of the
               pom-pom in a motor gun boat in the St. Nazaire raid. Completely
@@ -87,11 +89,7 @@
               Boats, who gallantly carried out their duty in entirely exposed
               positions against Enemy fire at very close range.
             </blockquote>
-          </div>
-          <img
-            src="assets/images/HMS Campbeltown conversion.webp"
-            style="width: 100%"
-          />
+          </div> -->
         </div>
         <!-- second colum -->
         <div class="column">
@@ -100,7 +98,7 @@
             style="width: 100%"
           />
           <!-- vc winner -->
-          <div>
+          <!-- <div>
             <img
               src="assets/images/Robert Edward Dudley RYDER.png"
               alt="vc winner Robert Edward Dudley RYDER"
@@ -123,19 +121,22 @@
               withdraw through an intense barrage of close range fire was almost
               a miracle
             </blockquote>
-          </div>
+          </div> -->
 
           <img
             src="assets/images/HMS campbeltown wedged in dock.jpg"
             style="width: 100%"
           />
           <img src="assets/images/HMS Campbeltown.webp" style="width: 100%" />
-          <img
+          <!-- <img
             src="assets/images/Lt-Col-R.K.-Montgomery.webp"
             style="width: 100%"
-          />
+          /> -->
 
-          <img src="assets/images/HMS Campbeltown.webp" style="width: 100%" />
+          <img
+            src="assets/images/HMS Campbeltown conversion.webp"
+            style="width: 100%"
+          />
         </div>
         <!-- third colum -->
         <div class="column">
@@ -148,7 +149,7 @@
             src="assets/images/Lt-Col-R.K.-Montgomery.webp"
             style="width: 100%"
           />
-          <div>
+          <!-- <div>
             <img
               src="assets/images/Chalres Newman.webp"
               alt="vc winner Chalres Newman"
@@ -204,9 +205,9 @@
               resulted in heavy damage to the important naval base at St.
               Nazaire
             </blockquote>
-          </div>
+          </div> -->
           <img src="assets/images/wounded solider.webp" style="width: 100%" />
-          <div>
+          <!-- <div>
             <img
               src="assets/images/Thomas Frank DURRANT.png"
               alt="vc winner Thomas Frank DURRANT.png"
@@ -244,7 +245,7 @@
               gallant Non-Commissioned Officer later died of the many wounds
               received in action.
             </blockquote>
-          </div>
+          </div> -->
           <img
             src="assets/images/St_ Nazaire  HMS Campbeltown 3.jpg"
             style="width: 100%"
@@ -257,7 +258,7 @@
             style="width: 100%"
           />
           <img src="assets/images/plan of attack.webp" style="width: 100%" />
-          <div>
+          <!-- <div>
             <img
               src="assets/images/Stephen Halden BEATTIE.png"
               alt="vc winner Stephen Halden BEATTIE"
@@ -275,7 +276,7 @@
               of the unnamed officers and men of a very gallant ship’s company,
               many of whom have not returned.
             </blockquote>
-          </div>
+          </div> -->
           <img
             src="assets/images/german troops next day.jpg"
             style="width: 100%"
@@ -284,6 +285,142 @@
           <img src="assets/images/german tirptz.png" style="width: 100%" />
         </div>
       </div>
+      <!-- VC winners and citation -->
+      <article class="vc-winners">
+        <h3 class="vc-winners-title">VC Winners</h3>
+        <section class="vc-winners-card">
+          <div>
+            <img
+              src="assets/images/William Alfred SAVAGE.png"
+              alt="image of VC winner William Alfred SAVAGE"
+            />
+            <h3 class="vc-winners-card-title">William Alfred SAVAGE</h3>
+          </div>
+          <blockquote>
+            For great gallantry, skill and devotion to duty as gunlayer of the
+            pom-pom in a motor gun boat in the St. Nazaire raid. Completely
+            exposed, and under heavy fire he engaged positions ashore with cool
+            and steady accuracy. On the way out of the harbour he kept up the
+            same vigorous and accurate fire against the attacking ships, until
+            he was killed at his gun. This Victoria Cross is awarded in
+            recognition not only of the gallantry and devotion to duty of Able
+            Seaman Savage, but also of the valour shown by many others, unnamed,
+            in Motor Launches, Motor Gun Boats and Motor Torpedo Boats, who
+            gallantly carried out their duty in entirely exposed positions
+            against Enemy fire at very close range....
+            <strong
+              ><a href="www.google.com" target="_blank"
+                >full citation</a
+              ></strong
+            >
+          </blockquote>
+        </section>
+        <section class="vc-winners-card">
+          <img
+            src="assets/images/Robert Edward Dudley RYDER.png"
+            alt="vc winner Robert Edward Dudley RYDER"
+          />
+          <h3 class="vc-winners-card-title">Robert Edward Dudley RYDER</h3>
+          <blockquote>
+            For great gallantry in the attack on St. Nazaire. He commanded a
+            force of small unprotected ships in an attack on a heavily defended
+            port and led H.M.S. Campbeltown in under intense fire from short
+            range weapons at point blank range. Though the main object of the
+            expedition had been accomplished in the beaching of Campbeltown, he
+            remained on the spot conducting operations, evacuating men from
+            Campbeltown and dealing with strong points and close range weapons
+            while exposed to heavy fire for one hour and sixteen minutes, and
+            did not withdraw till it was certain that his ship could be of no
+            use in rescuing any of the Commando Troops who were still ashore.
+            That his Motor Gun Boat, now full of dead and wounded, should have
+            survived and should have been able to withdraw through an intense
+            barrage of close range fire was almost a miracle...
+            <strong
+              ><a href="www.google.com" target="_blank"
+                >full citation</a
+              ></strong
+            >
+          </blockquote>
+        </section>
+        <section class="vc-winners-card">
+          <img
+            src="assets/images/Chalres Newman.webp"
+            alt="vc winner Chalres Newman"
+          />
+          <h3 class="vc-winners-card-title">Augustus Charles NEWMAN</h3>
+          <blockquote>
+            On the night of 27th/28th March, 1942, Lieutenant-Colonel Newman was
+            in command of the military force detailed to land on enemy occupied
+            territory and destroy the dock installations of the German
+            controlled naval base at St Nazaire. This important base was known
+            to be heavily defended and bomber support had to be abandoned owing
+            to bad weather. The operation was therefore bound to be exceedingly
+            hazardous, but Lieutenant-Colonel Newman, although empowered to call
+            off the assault at any stage, was determined to carry to a
+            successful conclusion the important task which had been assigned to
+            him. Coolly and calmly he stood on the bridge of the leading craft,
+            as the small force steamed up the estuary of the River Loire,
+            although the ships had been caught in the enemy searchlights and a
+            murderous crossfire opened from both banks, causing heavy
+            casualties.....
+            <strong
+              ><a href="www.google.com" target="_blank"
+                >full citation</a
+              ></strong
+            >
+          </blockquote>
+        </section>
+        <section class="vc-winners-card">
+          <img
+            src="assets/images/Thomas Frank DURRANT.png"
+            alt="vc winner Thomas Frank DURRANT.png"
+          />
+          <h3 class="vc-winners-card-title">Thomas Frank DURRANT</h3>
+          <blockquote>
+            For great gallantry, skill and devotion to duty when in charge of a
+            Lewis gun in H.M. Motor Launch 306 in the St Nazaire raid on the
+            28th March, 1942. Motor Launch 306 came under heavy fire while
+            proceeding up the River Loire towards the port. Sergeant Durrant, in
+            his position abaft the bridge, where he had no cover or protection,
+            engaged enemy gun positions and searchlights on shore. During this
+            engagement he was severely wounded in the arm but refused to leave
+            his gun. The Motor Launch subsequently went down the river and was
+            attacked by a German destroyer at 50-60 yards range, and often
+            closer. In this action Sergeant Durrant continued to fire at the
+            destroyer’s bridge with the greatest of coolness and with complete
+            disregard of the enemy’s fire.....
+            <strong
+              ><a href="www.google.com" target="_blank"
+                >full citation</a
+              ></strong
+            >
+          </blockquote>
+        </section>
+        <section class="vc-winners-card">
+          <img
+            src="assets/images/Stephen Halden BEATTIE.png"
+            alt="vc winner Stephen Halden BEATTIE"
+          />
+          <h3 class="vc-winners-card-title">Stephen Halden BEATTIE</h3>
+
+          <blockquote>
+            For great gallantry and determination in the attack on St. Nazaire
+            in command of H.M.S. Campbeltown. Under intense fire directed at the
+            bridge from point blank range of about 100 yards, and in the face of
+            the blinding glare of many searchlights, he steamed her into the
+            lockgates and beached and scuttled her in the correct position. This
+            Victoria Cross is awarded to Lieutenant-Commander Beattie in
+            recognition not only of his own valour but also of that of the
+            unnamed officers and men of a very gallant ship’s company, many of
+            whom have not returned....
+            <strong
+              ><a href="www.google.com" target="_blank"
+                >full citation</a
+              ></strong
+            >
+          </blockquote>
+        </section>
+      </article>
     </main>
     <!-- footer -->
     <footer>
