basic style added for hero section on index page, images also included

--- a/index.html
+++ b/index.html
@@ -56,33 +56,38 @@
     <!-- main -->
     <main>
       <!-- main top image  -->
-      <div class="hero-slider">
-        <h2 hidden>hero images</h2>
-        <div class="hero-slider-slide hero-slide-img-1">
-          <img
-            src="assets/images/st nazaire painting.jpg"
-            alt="HMS Campbeltown at St. Nazaire, by Norman Wilkinson"
-          />
+      <section class="hero">
+        <div class="slide-show-container">
+          <div class="wrapper-one">
+            <div class="wrapper-text">
+              <q class="wrapper-text-inner">
+                HMS Campbeltown at St. Nazaire, by Norman Wilkinson, National
+                Maritime Museum, Greenwich, London</q
+              >
+            </div>
+          </div>
+          <div class="wrapper-two">
+            <div class="wrapper-text">
+              <q class="wrapper-text-inner"
+                >HMS Campbeltown wedged on the dock in St. Nazaire.
+                Bundesarchiv, Bild 101II-MW-3724-16 / Schaaf / CC-BY-SA 3.0</q
+              >
+            </div>
+          </div>
+          <div class="wrapper-three">
+            <div class="wrapper-text">
+              <q class="wrapper-text-inner">
+                How the Campbeltown was modified to look like a German Mowe
+                class destroyer</q
+              >
+            </div>
+          </div>
         </div>
-        <div class="hero-slider-slide hero-slide-img-2">
-          <img
-            src="assets/images/HMS Campbeltown hit dock 2.webp"
-            alt="HMS Campbeltown hit dock and german photographed searching boat"
-          />
+        <div class="hero-header-text">
+          The greatest raid of all time, that i bet you haven't heard about….
+          Code name operation chariot
         </div>
-        <div class="hero-slider-slide hero-slide-img-3">
-          <img src="assets/images/modification to campbeltown.webp" alt="" />
-        </div>
-        <div id="hero-text">
-          <p>
-            <strong>
-              The greatest raid of all time, that i bet you haven't heard
-              about…. Code name operation chariot
-            </strong>
-          </p>
-        </div>
-        <i class="fa-solid fa-circle-arrow-down"></i>
-      </div>
+      </section>
       <article>
         <h1>The St Nazaire Raid - Operation Chariot</h1>
         <section>
