correct position of images and text on index page, seperate the different sections that make up the page

--- a/index.html
+++ b/index.html
@@ -88,12 +88,17 @@
           Code name operation chariot
         </div>
       </section>
-      <article>
+
+      <article class="index-main">
         <h1>The St Nazaire Raid - Operation Chariot</h1>
-        <section>
-          <h2>Background</h2>
-          <img src="assets/images/Tirpitz.jpg" alt="" />
-          <p>
+        <section class="st-nazaire-main-content">
+          <img
+            src="assets/images/Tirpitz.jpg"
+            alt="image of Tirpitz"
+            class="tirpitz"
+          />
+          <h2 class="st-nazaire-main-content-header">Background</h2>
+          <p class="st-nazaire-main-content-text">
             Operation Chariot was an audacious Combined Operation raid on the
             port of St Nazaire in German occupied France. Packed with tons of
             high explosives, the destroyer, HMS Campbeltown, was rammed into the
@@ -131,65 +136,77 @@
             use of the dry dock would effectively neutralize the threat the
             Tirpitz posed.
           </p>
-          <img src="" alt="" />
         </section>
-        <section>
-          <h2>The Plan</h2>
-          <img src="assets/images/detailed map plan.JPG" alt="" />
-          <img src="assets/images/St-Nazaire-mockup.png" alt="" />
-          <p>
-            The estuary was a complex mixture of mud flats and channels. A
-            frontal assault would, therefore, need a shallow draught vessel
-            running on a high tide. Although heavily defended, the Germans were
-            unlikely to have considered an attack across the mud flats and
-            shoals. Meticulous planning followed and advice sought on the
-            vagaries of tides and winds, which included studying French nautical
-            charts and tables up to 100 years old! The outline plan was simple.
-            The selected vessel, packed with high explosives in the bow with
-            troops and crew in protected areas, would ram the outer lock gate at
-            speed and become firmly stuck there. They would then disembark and
-            take cover behind a nearby air-raid shelter. The ship would then
-            blow up destroying the gate. A Motor Torpedo Boat would then
-            approach to fire especially designed torpedoes at the inner gate
-            which would collapse under pressure when the tide went out, damaging
-            the submarines berthed in their protected pens. The troops and crew
-            would then destroy as many dockyard targets as they could and
-            withdraw in fast motor launches which had followed them in. All this
-            was to be achieved under cover of an air raid. The planners,
-            themselves, had reservations about the withdrawal phase which was
-            difficult to predict since much depended on the element of surprise
-            and the effectiveness of the opposing forces. However, the risks
-            were less than the potential rewards. Outside the planning circle,
-            the Naval C in C Plymouth, thought the vessel would bounce off the
-            gate, a view he maintained against the advice of the engineer who
-            built it. He also thought that anyone within half a mile of the
-            explosion would be killed. Mountbatten conceded the point about the
-            destructive power of the explosion and delayed action fuses were to
-            be fitted to allow time for the troops and crew to evacuate the
-            area. However, on the question of the use of a boat to ram the lock
-            gate, he held firm. It was also decided to spread the raiding force
-            between the main ship and the supporting motor launches, simply to
-            avoid the total loss of the force in the event of disaster befalling
-            the main ship. HMS Campbeltown, an American lend-lease destroyer
-            (USS Buchanan), was chosen to lead the operation. Her interior was
-            stripped out, the bridge was armour-plated and additional protection
-            provided for the Commandos she would carry. The accompanying motor
-            launches (MLs), were to carry 150 Commandos. The boats were fitted
-            with two Oerlikon 20mm guns and additional fuel tanks to increase
-            their range. As the needs of the raid were reassessed, the ML fleet
-            was increased to 10 and then to 14. Only one motor gun boat (MGB)
-            was available - MGB 314, a C-Class Fairmile, commanded by Lt.
-            Dunstan Curtis. She would lead the attack with motor torpedo boat
-            (MTB) 74 in reserve. This was equipped with unproven flying
-            torpedoes to breach the dry dock gates if the Campbeltown failed to
-            reach its target.
-          </p>
-          <img src="" alt="" />
+        <section class="st-nazaire-main-content">
+          <img
+            src="assets/images/detailed map plan.JPG"
+            alt="detailed map plan of the battle"
+            class="mapplan-detailed"
+          />
+          <h2 class="st-nazaire-main-content-header">The Plan</h2>
+          <div>
+            <p class="st-nazaire-main-content-text">
+              The estuary was a complex mixture of mud flats and channels. A
+              frontal assault would, therefore, need a shallow draught vessel
+              running on a high tide. Although heavily defended, the Germans
+              were unlikely to have considered an attack across the mud flats
+              and shoals. Meticulous planning followed and advice sought on the
+              vagaries of tides and winds, which included studying French
+              nautical charts and tables up to 100 years old! The outline plan
+              was simple. The selected vessel, packed with high explosives in
+              the bow with troops and crew in protected areas, would ram the
+              outer lock gate at speed and become firmly stuck there. They would
+              then disembark and take cover behind a nearby air-raid shelter.
+              The ship would then blow up destroying the gate. A Motor Torpedo
+              Boat would then approach to fire especially designed torpedoes at
+              the inner gate which would collapse under pressure when the tide
+              went out, damaging the submarines berthed in their protected pens.
+              The troops and crew would then destroy as many dockyard targets as
+              they could and withdraw in fast motor launches which had followed
+              them in. All this was to be achieved under cover of an air raid.
+              The planners, themselves, had reservations about the withdrawal
+              phase which was difficult to predict since much depended on the
+              element of surprise and the effectiveness of the opposing forces.
+              However, the risks were less than the potential rewards. Outside
+              the planning circle, the Naval C in C Plymouth, thought the vessel
+              would bounce off the gate, a view he maintained against the advice
+              of the engineer who built it. He also thought that anyone within
+              half a mile of the explosion would be killed. Mountbatten conceded
+              the point about the destructive power of the explosion and delayed
+              action fuses were to be fitted to allow time for the troops and
+              crew to evacuate the area. However, on the question of the use of
+              a boat to ram the lock gate, he held firm. It was also decided to
+              spread the raiding force between the main ship and the supporting
+              motor launches, simply to avoid the total loss of the force in the
+              event of disaster befalling the main ship. HMS Campbeltown, an
+              American lend-lease destroyer (USS Buchanan), was chosen to lead
+              the operation. Her interior was stripped out, the bridge was
+              armour-plated and additional protection provided for the Commandos
+              she would carry. The accompanying motor launches (MLs), were to
+              carry 150 Commandos. The boats were fitted with two Oerlikon 20mm
+              guns and additional fuel tanks to increase their range. As the
+              needs of the raid were reassessed, the ML fleet was increased to
+              10 and then to 14. Only one motor gun boat (MGB) was available -
+              MGB 314, a C-Class Fairmile, commanded by Lt. Dunstan Curtis. She
+              would lead the attack with motor torpedo boat (MTB) 74 in reserve.
+              This was equipped with unproven flying torpedoes to breach the dry
+              dock gates if the Campbeltown failed to reach its target.
+            </p>
+            <img
+              src="assets/images/St-Nazaire-mockup.png"
+              alt="mock up module of the dock"
+              class="mock-up"
+            />
+          </div>
         </section>
-        <section>
-          <h2>The Battle</h2>
-          <img src="assets/images/comando battle plan.JPG" alt="" />
-          <p>
+        <section class="st-nazaire-main-content">
+          <img
+            src="assets/images/comando battle plan.JPG"
+            alt="battle plan for commandos once landed"
+            class="mapplan-detailed"
+          />
+          <h2 class="st-nazaire-main-content-header">The Battle</h2>
+          <p class="st-nazaire-main-content-text">
             The fleet sailed from Falmouth at 3 pm on the 26th of March. MGB
             314, was at the head with two escort destroyers flanking the MLs and
             HMS Campbeltown. South west of Ushant, they came across a U-Boat and
@@ -242,11 +259,15 @@
             the 18 coastal craft, which set out from Falmouth, only four
             returned.
           </p>
-          <img src="" alt="" />
         </section>
-        <section>
-          <h2>Aftermath</h2>
-          <p>
+        <section class="st-nazaire-main-content">
+          <img
+            src="assets/images/Operation-Chariot-memorial.webp"
+            alt="full picture of memorial"
+            class="memorial-fullsize"
+          />
+          <h2 class="st-nazaire-main-content-header">Aftermath</h2>
+          <p class="st-nazaire-main-content-text">
             The Normandie Dock months after the raid. The wreck of HMS
             Campbeltown is dwarfed by the size of the dock The explosion put the
             dry dock out of commission until the end of the war. The St Nazaire
@@ -282,16 +303,15 @@
             She remained in Norwegian fjords to threaten Allied shipping until
             she was destroyed by the RAF on 12 November 1944.
           </p>
-          <img src="" alt="" />
         </section>
-        <section>
-          <h2>Legacy</h2>
-          <img src="assets/images/Operation-Chariot-memorial.webp" alt="" />
+        <section class="st-nazaire-main-content">
           <img
             src="assets/images/Operation-Chariot-memorial-closeup.webp"
-            alt=""
+            alt="close up of wording on memorial"
+            class="memorial-closeup"
           />
-          <p>
+          <h2 class="st-nazaire-main-content-header">Legacy</h2>
+          <p class="st-nazaire-main-content-text">
             St Nazaire was one of the 38 battle honours presented to the
             Commandos after the war. The raid has since been called The Greatest
             Raid of All. The survivors formed their own association, the St
@@ -299,7 +319,6 @@
             Kingdom. A memorial to the raid erected in Falmouth bears the
             following inscription:
           </p>
-          <img src="" alt="" />
         </section>
       </article>
     </main>
