corrted class name for elements within gallery effecting index page

--- a/index.html
+++ b/index.html
@@ -301,24 +301,28 @@
             of 15,000 bunkers by May 1943 to defend the Atlantic coast from
             Norway to Spain. The battleship Tirpitz never entered the Atlantic.
             She remained in Norwegian fjords to threaten Allied shipping until
-            she was destroyed by the RAF on 12 November 1944.
+            she was destroyed by the RAF on 12 November 1944. St Nazaire was one
+            of the 38 battle honours presented to the Commandos after the war.
+            The raid has since been called The Greatest Raid of All. The
+            survivors formed their own association, the St Nazaire Society,
+            which is a registered charity in the United Kingdom.
           </p>
         </section>
         <section class="st-nazaire-main-content">
-          <img
-            src="assets/images/Operation-Chariot-memorial-closeup.webp"
-            alt="close up of wording on memorial"
-            class="memorial-closeup"
-          />
-          <h2 class="st-nazaire-main-content-header">Legacy</h2>
-          <p class="st-nazaire-main-content-text">
-            St Nazaire was one of the 38 battle honours presented to the
-            Commandos after the war. The raid has since been called The Greatest
-            Raid of All. The survivors formed their own association, the St
-            Nazaire Society, which is a registered charity in the United
-            Kingdom. A memorial to the raid erected in Falmouth bears the
-            following inscription:
-          </p>
+          <h2 class="st-nazaire-main-content-header" style="text-align: center">
+            Memorial Inscription
+          </h2>
+          <figure class="figure-test">
+            <img
+              src="assets/images/Operation-Chariot-memorial-closeup.webp"
+              alt="Elephant at sunset"
+              class="img-test"
+            />
+            <figcaption class="figcaption-test">
+              A memorial to the raid erected in Falmouth bears the following
+              inscription:
+            </figcaption>
+          </figure>
         </section>
       </article>
     </main>
