--- a/media-links.html
+++ b/media-links.html
@@ -97,13 +97,13 @@
       <!-- operation chariot book and link -->
       <section class="st-nazaire-books">
         <h4>Looking for a good book?</h4>
-        <figure>
+        <figure class="st-nazaire-books-fig">
           <img
             src="assets/images/the greatest raid - book.jpg"
             alt="The Greatest Raid: St Nazaire, 1942: The Heroic Story of Operation Chariot"
-            class="the-greatest-raid"
+            class="st-nazaire-books-fig-img"
           />
-          <figcaption>
+          <figcaption class="st-nazaire-books-fig-review">
             In the darkest months of the Second World War, Churchill approved
             what seemed to many like a suicide mission. Under orders to attack
             the St Nazaire U-boat base on the Atlantic seaboard, British
@@ -136,12 +136,13 @@
         </figure>
 
         <!-- into jaws of death book and link -->
-        <figure>
+        <figure class="st-nazaire-books-fig">
           <img
             src="assets/images/Into the Jaws of Death - book.jpg"
             alt="Into the Jaws of Death: The True Story of the Legendary Raid on Saint-Nazaire"
+            class="st-nazaire-books-fig-img"
           />
-          <figcaption>
+          <figcaption class="st-nazaire-books-fig-review">
             It is the night of 28 March 1942. Royal Navy and British commandos
             are poised to assault the German-held port of Saint-Nazaire in what
             will be one of the most audacious and daring raids of the Second
