added in missing alt tags to images on galler, also updated memorial section on index page

--- a/index.html
+++ b/index.html
@@ -312,13 +312,13 @@
           <h2 class="st-nazaire-main-content-header" style="text-align: center">
             Memorial Inscription
           </h2>
-          <figure class="figure-test">
+          <figure class="st-nazaire-memorial">
             <img
               src="assets/images/Operation-Chariot-memorial-closeup.webp"
               alt="Elephant at sunset"
-              class="img-test"
+              class="st-nazaire-memorial-img"
             />
-            <figcaption class="figcaption-test">
+            <figcaption class="st-nazaire-memorial-caption">
               A memorial to the raid erected in Falmouth bears the following
               inscription:
             </figcaption>
