--- a/gallery.html
+++ b/gallery.html
@@ -62,6 +62,7 @@
         <div class="column">
           <img
             src="assets/images/Aerial reconnaissance.jpg"
+            alt="aerial reconnaissance of St Nazaire"
             style="width: 100%"
             class="myDIV"
           />
@@ -70,23 +71,35 @@
           </div>
           <img
             src="assets/images/caputred commandos 2.jpg"
+            alt="caputred commando soliders after the raid"
             style="width: 100%"
           />
-          <img src="assets/images/caputred commandos.jpg" style="width: 100%" />
+          <img
+            src="assets/images/caputred commandos.jpg"
+            alt="caputred commando soliders after the raid"
+            style="width: 100%"
+          />
         </div>
         <!-- second colum -->
         <div class="column">
           <img
             src="assets/images/HMS Campbeltown hit dock.webp"
+            alt="HMS campbeltown after hitting the dock"
             style="width: 100%"
           />
           <img
             src="assets/images/HMS campbeltown wedged in dock.jpg"
+            alt="HMS campbeltown wedged into the dock"
             style="width: 100%"
           />
-          <img src="assets/images/HMS Campbeltown.webp" style="width: 100%" />
+          <img
+            src="assets/images/HMS Campbeltown.webp"
+            alt="HMS campbeltown image before the raid"
+            style="width: 100%"
+          />
           <img
             src="assets/images/HMS Campbeltown conversion.webp"
+            alt="HMS campbeltown being converted"
             style="width: 100%"
           />
         </div>
@@ -94,15 +107,22 @@
         <div class="column">
           <img
             src="assets/images/St Nazaire aftermath.jpg"
+            alt="aerial photo of the aftermath of the raid"
             style="width: 100%"
           />
           <img
             src="assets/images/Lt-Col-R.K.-Montgomery.webp"
+            alt="picture of Lt Col R.K -Montgomery"
             style="width: 100%"
           />
-          <img src="assets/images/wounded solider.webp" style="width: 100%" />
+          <img
+            src="assets/images/wounded solider.webp"
+            alt="image of a caputred wounded solider"
+            style="width: 100%"
+          />
           <img
             src="assets/images/St_ Nazaire  HMS Campbeltown 3.jpg"
+            alt="HMS Campbeltown from another angle wedged in dock"
             style="width: 100%"
           />
         </div>
@@ -110,15 +130,29 @@
         <div class="column">
           <img
             src="assets/images/modification to campbeltown.webp"
+            alt="diagram showing modification to be made"
             style="width: 100%"
           />
-          <img src="assets/images/plan of attack.webp" style="width: 100%" />
+          <img
+            src="assets/images/plan of attack.webp"
+            alt="photographic with notes showing plan of attack"
+            style="width: 100%"
+          />
           <img
             src="assets/images/german troops next day.jpg"
+            alt="german troops clearing St Nazaire next day"
             style="width: 100%"
           />
-          <img src="assets/images/motorboat.jpg" style="width: 100%" />
-          <img src="assets/images/german tirptz.png" style="width: 100%" />
+          <img
+            src="assets/images/motorboat.jpg"
+            alt="Motorboat used in the raid"
+            style="width: 100%"
+          />
+          <img
+            src="assets/images/german tirptz.png"
+            alt="picture of tirptz from the air"
+            style="width: 100%"
+          />
         </div>
       </div>
       <!-- VC winners and citation -->
@@ -132,7 +166,9 @@
             />
             <h3 class="vc-winners-card-title">William Alfred SAVAGE</h3>
           </div>
-          <blockquote>
+          <blockquote
+            cite="https://vcgca.org/our-people/profile/1465/william-alfred"
+          >
             For great gallantry, skill and devotion to duty as gunlayer of the
             pom-pom in a motor gun boat in the St. Nazaire raid. Completely
             exposed, and under heavy fire he engaged positions ashore with cool
@@ -157,7 +193,9 @@
             alt="vc winner Robert Edward Dudley RYDER"
           />
           <h3 class="vc-winners-card-title">Robert Edward Dudley RYDER</h3>
-          <blockquote>
+          <blockquote
+            cite="https://vcgca.org/our-people/profile/1687/robert-edward-dudley"
+          >
             For great gallantry in the attack on St. Nazaire. He commanded a
             force of small unprotected ships in an attack on a heavily defended
             port and led H.M.S. Campbeltown in under intense fire from short
@@ -184,7 +222,9 @@
             alt="vc winner Chalres Newman"
           />
           <h3 class="vc-winners-card-title">Augustus Charles NEWMAN</h3>
-          <blockquote>
+          <blockquote
+            cite="https://vcgca.org/our-people/profile/279/augustus-charles"
+          >
             On the night of 27th/28th March, 1942, Lieutenant-Colonel Newman was
             in command of the military force detailed to land on enemy occupied
             territory and destroy the dock installations of the German
@@ -212,7 +252,9 @@
             alt="vc winner Thomas Frank DURRANT.png"
           />
           <h3 class="vc-winners-card-title">Thomas Frank DURRANT</h3>
-          <blockquote>
+          <blockquote
+            cite="https://vcgca.org/our-people/profile/1555/thomas-frank"
+          >
             For great gallantry, skill and devotion to duty when in charge of a
             Lewis gun in H.M. Motor Launch 306 in the St Nazaire raid on the
             28th March, 1942. Motor Launch 306 came under heavy fire while
@@ -238,8 +280,9 @@
             alt="vc winner Stephen Halden BEATTIE"
           />
           <h3 class="vc-winners-card-title">Stephen Halden BEATTIE</h3>
-
-          <blockquote>
+          <blockquote
+            cite="https://vcgca.org/our-people/profile/1443/stephen-halden"
+          >
             For great gallantry and determination in the attack on St. Nazaire
             in command of H.M.S. Campbeltown. Under intense fire directed at the
             bridge from point blank range of about 100 yards, and in the face of
