further alt tags added as well as aria-label to media page external links

--- a/media-links.html
+++ b/media-links.html
@@ -69,6 +69,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen
             id="clarkson-documentary-title"
+            alt="documentary by jeremy clarkson about the St Nazaire Raid"
           ></iframe>
         </div>
       </section>
@@ -81,6 +82,8 @@
           <a
             href="https://evergreenpodcasts.com/warriors-in-their-own-words/lt-col-r-k-montgomery-the-st-nazaire-raid"
             target="_blank"
+            rel="noopener"
+            aria-label="Visit this page to see the srouce of the podcast (opens in a new tab)"
           >
             Lt Col R.K. Montgomery: The St. Nazaire Raid
           </a>
@@ -92,6 +95,7 @@
           scrolling="no"
           src="https://playlist.megaphone.fm/?e=FPMN8461578105&light=true&light=true"
           width="100%"
+          alt="first hand account recording from Lt Col Montgomery who took part in the raid"
         ></iframe>
       </section>
       <!-- operation chariot book and link -->
@@ -130,6 +134,7 @@
               target="_blank"
               rel="noopener"
               style="font-size: 2rem"
+              aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
               >Buy Now</a
             >
           </figcaption>
@@ -165,6 +170,7 @@
               target="_blank"
               rel="noopener"
               style="font-size: 2rem"
+              aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
               >Buy Now</a
             >
           </figcaption>
